Simplification of Player code, eliminating redundant functions for bound player buttons and simply using existing functions with bound Component Objects. As a result, bug fixes to PlayOrPause() func. Fixes to Player styling (Player Error overflowing to left) and WebKit fullscreen.

--- a/src/less/core-theme/players.less
+++ b/src/less/core-theme/players.less
@@ -151,7 +151,6 @@ div[data-syiro-minor-component="player-error"]{
     position: absolute;
     z-index: 4; // Force above all content in the Audio Player or Video Player
     visibility: hidden; // Default to not being visible
-    left: 0; // Force to left
 }
 
 // #endregion
@@ -343,9 +342,10 @@ div[data-syiro-component="video-player"]{
     // #endregion
 
     &:-webkit-full-screen{ // Webkit Fullscreen
-        height: 100%;
-        width: 100%;
-        margin: 0;
+        height: 100% !important;
+        width: 100% !important;
+		position: absolute;
+		top: 0;
     }
 
     & > div[data-syiro-minor-component="player-menu"] > div[data-syiro-component="list"] > div[data-syiro-component="list-item"]{
